--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         }
     },
     "devDependencies": {
-        "electron-builder": "^20.44.4"
+        "electron": "^5.0.8",
+        "electron-builder": "^21.1.5",
+        "electron-packager": "^14.0.3"
     }
 }
