--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "main": "src/main.js",
     "author": "Ruslan Bekenev <furyinbox@gmail.com>",
     "scripts": {
-        "start": "electron ./src/"
+        "start": "cd src && electron ./src/"
     },
     "build": {
         "appId": "com.krydos.todoist",
@@ -26,7 +26,6 @@
     },
     "devDependencies": {
         "electron": "^6.0.1",
-        "electron-builder": "^21.2.0",
-        "electron-packager": "^14.0.4"
+        "electron-builder": "^21.2.0"
     }
 }
