--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,9 @@
   "version": "1.22.0",
   "description": "Todoist for linux",
   "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
   "keywords": [
     "todoist",
     "productivity",
@@ -12,5 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "electron-window-state": "^5.0.3"
+  },
+  "devDependencies": {
+    "electron": "^6.0.1",
+    "electron-packager": "^14.0.4"
   }
 }
